--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_note_details">NoteDetailsActivity</string>
     <string name="title_note_list">My Notes</string>
+    <string name="title_activity_create_note">CreateNoteActivity</string>
 </resources>
