Now user can save image.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_activity_create_note">CreateNoteActivity</string>
     <string name="update">Update</string>
     <string name="title_update_note">Update note</string>
+    <string name="delete">Delete</string>
+    <string name="attach">Attach</string>
 </resources>
